unpackaged/main/default/objects/Survey_Response_Opportunity__c/Survey_Response_Opportunity__c.object-meta.xml
<CustomObject>
    <description>Used to link GetFeedback survey results to Salesforce Service Only / Consulting Request Opportunities</description>
    <label>Survey Response Opportunity</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Response Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>