unpackaged/main/default/objects/Survey_Response_Opportunity__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Opportunity_Number__r.Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>