unpackaged/main/default/objects/Survey_Response_Opportunity__c/fields/Experience_Rating__c.field-meta.xml
<CustomField>
    <fullName>Experience_Rating__c</fullName>
    <label>Experience Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>