unpackaged/main/default/objects/Survey_Response_Opportunity__c/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Survey Response Opportunities</relationshipLabel>
    <relationshipName>Survey_Response_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>