unpackaged/main/default/objects/Survey_Response_Opportunity__c/fields/Resources__c.field-meta.xml
<CustomField>
    <fullName>Resources__c</fullName>
    <description>Populate Resource Names from Services Only/Consulting Request</description>
    <label>Resources</label>
    <length>250</length>
    <type>Text</type>
</CustomField>