unpackaged/main/default/objects/Survey_Response_Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity_Number__c</columns>
    <columns>Experience_Rating__c</columns>
    <columns>Comment__c</columns>
    <columns>Improvement__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>